--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
+        <logback.version>1.2.3</logback.version>
     </properties>
 
     <dependencies>
